# limine

./: .editorconfig  .gitignore  .typos.toml  BOOTAA64.EFI  BOOTIA32.EFI  BOOTLOONGARCH64.EFI  BOOTRISCV64.EFI  BOOTX64.EFI  CONFIG.md  COPYING  ChangeLog  GNUmakefile  GNUmakefile.in  LICENSE  LICENSE.md  Makefile  PHILOSOPHY.md  PROTOCOL.md  PXE.md  README.md  STIVALE.md  STIVALE2.md  USAGE.md  autogen.sh  bochsrc  bootstrap  compile_flags.txt  configure.ac  flake.nix  inc.S  limine-bios-hdd.h  limine-bios.sys  limine-deploy.c  limine-enroll-config.c  limine-hdd.h  limine-install-linux-x86_32  limine-install-linux-x86_64  limine-install.c  limine-version.c  limine.c  (+16 more)
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check.yml  main.yml  qa.yml  release.yml
aux/: elf.h  make_toolchain.sh
aux/elf/: elf32.h
bootsect/: bootsect.asm  disk.inc  gdt.inc  simple_print.inc
build-aux/: make_toolchain.sh
build-aux/elf/: elf.h  elf_common.h
cdboot/: bootsect.asm  findFile.asm  findPVD.asm  iso9660.asm  read_2k_sectors.asm  strcmp.asm
common/: GNUmakefile  commands.c  commands.h  common.mk  config.h.in  console.c  console.h  efi_thunk.asm_uefi_aarch64  efi_thunk.asm_uefi_ia32  efi_thunk.asm_uefi_loongarch64  efi_thunk.asm_uefi_riscv64  efi_thunk.asm_uefi_x86_64  entry.s2.c  entry.s3.c  entry_asm.s2.asm_bios_ia32  font.README  gensyms.sh  kuroko-limine.h  libfdt.patch  limine.h  linker_bios.ld.in  linker_uefi32.ld.in  linker_uefi64.ld.in  linker_uefi_aarch64.ld.in  linker_uefi_ia32.ld.in  linker_uefi_loongarch64.ld.in  linker_uefi_riscv64.ld.in  linker_uefi_x86_64.ld.in  menu.c  menu.h  menu_thunk.asm_aarch64  menu_thunk.asm_ia32  menu_thunk.asm_loongarch64  menu_thunk.asm_riscv64  menu_thunk.asm_x86_64  sbat.c  stb_image.patch
common/compress/: gzip.c  gzip.h  tinfgzip.c  tinfgzip.h
common/crypt/: blake2b.c  blake2b.h
common/drivers/: disk.h  disk.s2.c  edid.c  edid.h  fwcfg.h  fwcfg.s2.c  gop.c  gop.h  serial.c  serial.h  serial.s2.c  vbe.c  vbe.h  vga_textmode.c  vga_textmode.h
common/fs/: echfs.h  echfs.s2.c  ext2.h  ext2.s2.c  fat32.h  fat32.s2.c  file.h  file.s2.c  iso9660.h  iso9660.s2.c  ntfs.h  ntfs.s2.c
common/kuroko/: builtins.c  chunk.c  compiler.c  debug.c  exceptions.c  limine-os.c  malloc.c  memory.c  methods.h  obj_base.c  obj_bytes.c  obj_dict.c  obj_function.c  obj_gen.c  obj_list.c  obj_long.c  obj_numeric.c  obj_range.c  obj_set.c  obj_slice.c  obj_str.c  obj_tuple.c  obj_typing.c  object.c  opcode_enum.h  opcodes.h  parseargs.c  private.h  repl.c  rline.c  scanner.c  stubs.c  sys.c  table.c  threads.c  value.c  vm.c  wcwidth._h
common/lib/: acpi.c  acpi.h  blib.c  blib.h  blib.s2.c  bmp.c  bmp.h  config.c  config.h  elf.c  elf.h  elsewhere.c  elsewhere.h  fb.c  fb.h  fdt.c  fdt.h  getchar.c  getchar.h  gterm.c  gterm.h  guid.c  guid.h  image.c  image.h  libc.c  libc.h  libc.s2.c  macros.aarch64_asm.h  mem.asm64  mem.asm_aarch64  mem.asm_riscv64  mem.asm_x86_64  mem.s2.asm_ia32  memory.s2.c  misc.c  misc.h  misc.s2.c  panic.s2.c  part.c  (+28 more)
common/libc-compat/: stdlib.h  string.h
common/mm/: mtrr.c  mtrr.h  pmm.c  pmm.h  pmm.s2.c  vmm.c  vmm.h
common/protos/: chainload.c  chainload.h  chainload_next.c  chainload_next.h  limine.32.c  limine.c  limine.h  limine_32.asm_x86  limine_asm.asm_ia32  limine_rt.asm32u  limine_rt.asmb  linux.32.c  linux.c  linux.h  linux_32.asm_x86  linux_risc.c  linux_riscv64.c  multiboot.32.c  multiboot.h  multiboot1.32.c  multiboot1.c  multiboot1.h  multiboot2.32.c  multiboot2.c  multiboot2.h  multiboot_32.asm_x86  multiboot_reloc.asm_ia32  multiboot_reloc.asm_x86  stivale.32.c  stivale.c  stivale.h  stivale2.c  stivale2.h  stivale2_rt.asm32u  stivale2_rt.asm_bios_ia32  stivale2_rt.asmb
common/pxe/: pxe.h  pxe.s2.c  pxe_asm.s2.asm_bios_ia32  tftp.h  tftp.s2.c
common/stb/: stb_image.c
common/sys/: a20.h  a20.s2.c  cpu.c  cpu.h  cpu_riscv.c  dummy_isr.asm_ia32  dummy_isr.asm_x86_64  e820.h  e820.s2.c  exceptions.s2.c  gdt.h  gdt.s2.c  idt.c  idt.h  idt.s2.c  int_thunks.s2.asm_bios_ia32  lapic.c  lapic.h  (+10 more)
decompressor/: GNUmakefile  Makefile  decompressor.mk  entry.S  entry.asm  linker.ld  main.c  mem.asm  tinf  tinf.patch
drivers/: disk.c  disk.h  e9.c  e9.h  vga_textmode.c  vga_textmode.h
hddboot/: bootsect.asm
host/: .gitignore  Makefile  hgen.sh  host.mk  limine-deploy.c  limine-enroll-config.c  limine-version.c  limine.c
kuroko-inc/: dirent.h  inttypes.h  kuroko  stdio.h  stdlib.h  string.h
lib/: disk.c  disk.h  libc.h  mbr.h  print.c  real.c  real.h
limine-deploy/: .gitignore  Makefile  hgen.sh  limine-deploy.c
limine-install/: .gitignore  Makefile  hgen.c  hgen.sh  inc.S  limine-install  limine-install.c
limine-s2deploy/: .gitignore  Makefile  limine-s2deploy.c
nix/: build.nix  keep-directory-diff.nix
pxeboot/: bootsect.asm
qloader2-example/: README.md  build.sh  clean.sh
scripts/: make_toolchain.sh  make_toolchain_bios.sh  make_toolchain_uefi.sh
src/: Makefile  linker.ld  main.c  menu.c  qloader2.h
stage1/: gdt.asm
stage2/: Makefile  entry.asm  gensyms.sh  limine.h  linker.ld  main.c  menu.c  menu.h  tinf
stage23/: GNUmakefile  Makefile  console.c  console.h  entry.s2.c  entry.s3.c  gensyms.sh  gensyms64.sh  linker.ld  linker_bios.ld  linker_dbg.ld  linker_nomap.ld  linker_nomap_bios.ld  linker_nomap_uefi.ld  linker_stage2only.ld  linker_uefi.ld  linker_uefi32.ld  linker_uefi32_nomap.ld  linker_uefi_nomap.ld  main.c  menu.c  menu.h  sbat.c  test_pipefail.sh
stages/: Makefile  main.c  menu.h
stdinc/: stdalign.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdnoreturn.h
stivale/: stivale.h  stivale2.h
test/: .gitignore  GNUmakefile  Makefile  device_tree.dts  e9print.c  e9print.h  limine-fwcfg.cfg  limine.c  limine.cfg  limine.conf  linker.ld  memory.c  multiboot.c  multiboot.ld  multiboot2.c  multiboot2.ld  multiboot2_trampoline.asm  multiboot_trampoline.asm  qloader2.cfg  stivale.c  stivale2.c  test.asm  test.mk
tinf/: tinfgzip.c  tinflate.c
toolchain/: .gitignore  make_toolchain.sh
toolchain-detect/: configure.ac  toolchain.mk.in
(+365 files in other folders)
